--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/white"
     tools:context=".MainActivity">
 
     <ProgressBar
@@ -35,8 +36,54 @@
         android:id="@+id/login_form"
         android:orientation="vertical">
 
-        [remove this and do your layout here]
+        <ImageView
+            android:id="@+id/image_logo"
+            android:src="@drawable/civitas_main_logo"
+            android:layout_gravity="center"
+            android:layout_width="200dp"
+            android:layout_height="120dp" />
 
+        <EditText
+            android:id="@+id/edit_login_email"
+            android:hint="@string/edit_login_email"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <EditText
+            android:id="@+id/edit_login_password"
+            android:hint="@string/edit_login_password"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/button_login_confirm"
+                android:text="@string/button_login_confirm"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <Button
+                android:id="@+id/button_login_register"
+                android:text="@string/button_login_register"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/text_login_reset_password"
+            android:text="@string/text_login_reset_password"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
