--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -82,6 +82,7 @@
             android:text="@string/text_login_reset_password"
             android:layout_gravity="center"
             android:gravity="center"
+            android:clickable="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
