--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -71,6 +71,7 @@
             <Button
                 android:id="@+id/button_register_confirm"
                 android:text="@string/button_register_submit"
+                android:background="@drawable/buttons"
                 android:layout_width="match_parent"
                 android:layout_weight="1"
                 android:layout_height="wrap_content" />
@@ -78,6 +79,7 @@
             <Button
                 android:id="@+id/button_register_login"
                 android:text="@string/button_register_login"
+                android:background="@drawable/buttons"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
