--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -67,6 +67,7 @@
                 android:id="@+id/button_login_confirm"
                 android:text="@string/button_login_confirm"
                 android:background="@drawable/buttons"
+                android:textColor="@color/white"
                 android:layout_weight="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -75,6 +76,7 @@
                 android:id="@+id/button_login_register"
                 android:text="@string/button_login_register"
                 android:background="@drawable/buttons"
+                android:textColor="@color/white"
                 android:layout_weight="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -83,6 +85,8 @@
         <TextView
             android:id="@+id/text_login_reset_password"
             android:text="@string/text_login_reset_password"
+            android:layout_marginTop="24dp"
+            android:textStyle="bold"
             android:layout_gravity="center"
             android:gravity="center"
             android:clickable="true"
