--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -72,6 +72,7 @@
                 android:id="@+id/button_register_submit"
                 android:text="@string/button_register_submit"
                 android:background="@drawable/buttons"
+                android:textColor="@color/white"
                 android:layout_width="match_parent"
                 android:layout_weight="1"
                 android:layout_height="wrap_content" />
