--- a/app/src/main/res/layout/fragment_new_artefact.xml
+++ b/app/src/main/res/layout/fragment_new_artefact.xml
@@ -68,6 +68,7 @@
             android:hint="@string/hint_new_artefact_date" />
 
         <Button
+            android:id="@+id/button_new_artefact_save"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
