change logo within drawer

--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -11,7 +11,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/ic_logo" />
+        android:src="@mipmap/civitas_logo" />
 
     <TextView
         android:id="@+id/text_nav_user_name"
