--- a/app/src/main/res/layout/cardview_artefact.xml
+++ b/app/src/main/res/layout/cardview_artefact.xml
@@ -20,6 +20,8 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:background="@color/civitas_dark_grey"
+            android:src="@drawable/civitas_main_logo"
+            android:contentDescription="@string/artefact_image"
             android:scaleType="centerCrop" />
 
         <TextView
