--- a/app/src/main/res/layout/cardview_artefact.xml
+++ b/app/src/main/res/layout/cardview_artefact.xml
@@ -15,14 +15,37 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/image_cardview_artefact"
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:background="@color/civitas_dark_grey"
-            android:src="@drawable/civitas_main_logo"
-            android:contentDescription="@string/artefact_image"
-            android:scaleType="centerCrop" />
+            android:layout_height="200dp">
+
+            <ProgressBar
+                android:id="@+id/progress_cardview_artefact"
+                style="?android:attr/progressBarStyleLarge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintBottom_toBottomOf="@+id/image_cardview_artefact"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:visibility="gone"/>
+
+            <ImageView
+                android:id="@+id/image_cardview_artefact"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:src="@drawable/civitas_main_logo"
+                android:contentDescription="@string/artefact_image"
+                android:scaleType="fitXY" />
+                <!--android:background="@color/civitas_dark_grey"-->
+
+
+        </android.support.constraint.ConstraintLayout>
+
 
         <TextView
             android:id="@+id/text_cardview_artefact_name"
