--- a/app/src/main/res/layout/cardview_artefact.xml
+++ b/app/src/main/res/layout/cardview_artefact.xml
@@ -51,9 +51,9 @@
             android:id="@+id/text_cardview_artefact_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:text="@string/cardview_default_name"
             android:textColor="@color/civitas_dark_grey"
+            android:textStyle="bold"
             android:textSize="16sp" />
 
         <TextView
