--- a/app/src/main/res/layout/spinner_category_row.xml
+++ b/app/src/main/res/layout/spinner_category_row.xml
@@ -1,24 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginStart="8dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginEnd="8dp">
 
     <ImageView
         android:id="@+id/image_category"
-        android:layout_width="wrap_content"
-        android:src="@drawable/ic_map_akropolis"
-        android:layout_height="wrap_content" />
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:src="@drawable/ic_map_akropolis" />
 
     <TextView
         android:id="@+id/text_category"
-        android:layout_alignStart="@id/image_category"
-        android:text="akropolis"
-        android:layout_marginLeft="24dp"
-        android:layout_toEndOf="@id/image_category"
-        android:layout_alignParentTop="true"
-        android:layout_alignBottom="@id/image_category"
-        android:gravity="center"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@id/image_category"
+        android:layout_alignBottom="@id/image_category"
+        android:layout_alignParentTop="true"
+        android:textSize="24sp"
+        android:layout_marginLeft="48dp"
+        android:layout_toEndOf="@id/image_category"
+        android:gravity="center"
+        android:text="akropolis" />
 
 </RelativeLayout>
