--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="grey">#737070</color>
+    <color name="light_grey">#a59f9f</color>
     <color name="civitas_dark_grey">#2d2d2d</color>
 </resources>
