--- a/app/src/main/res/layout/fragment_new_artefact.xml
+++ b/app/src/main/res/layout/fragment_new_artefact.xml
@@ -40,14 +40,36 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-
-            <Button
-                android:id="@+id/button_new_artefact_image"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:background="@drawable/buttons"
-                android:text="@string/button_new_artefact_image" />
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/button_new_artefact_image_from_camera"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/buttons"
+                    android:padding="8dp"
+                    android:src="@drawable/ic_camera"
+                    android:text="@string/button_new_artefact_image" />
+
+                <ImageButton
+                    android:id="@+id/button_new_artefact_image_from_gallery"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/buttons"
+                    android:padding="8dp"
+                    android:src="@drawable/ic_gallery"
+                    android:text="@string/button_new_artefact_image" />
+
+
+            </LinearLayout>
+
 
             <ImageView
                 android:id="@+id/image_new_artefact"
