--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -41,9 +41,10 @@
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:clickable="true"
+            app:rippleColor="@color/colorPrimary"
+            app:srcCompat="@drawable/button_round"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/buttons" />
+            app:layout_constraintEnd_toEndOf="parent" />
 
     </RelativeLayout>
 
